3.3.8
* Updated for 8.2

3.3.7-beta1
* Fix for https://github.com/nickbock/ElvUI_Enhanced_Again/issues/94
* small change for https://github.com/nickbock/ElvUI_Enhanced_Again/issues/91

3.3.6-beta1
* Fix for ElvUI 10.88 (https://github.com/nickbock/ElvUI_Enhanced_Again/issues/91)

3.3.5-beta1
* Progression updated with Battle of Dazar'alor and Crucible of Storms
 
3.3.4-beta1
* Updated for 8.1

3.3.3-beta2
* Progression tooltip was not working

3.3.3-beta1
* Added progession tooltip for Uldir (Thanks fang2hou)

3.3.2-beta2
* Minimapbar improvements

3.3.2-beta1
* Optimalisation to remove micro stutter.
* Added functionalty for multiple columns in the minimap bar. (beta)

3.3.1-beta2
* Fix for lua error when in instance. Issue https://github.com/nickbock/ElvUI_Enhanced_Again/issues/75

3.3.1-beta1
* Added WarResources datatext based on the classhall datatext from ElvUI
* Extra fixing for garrison icon

3.3.0-beta9
* Partial Fix for https://github.com/nickbock/ElvUI_Enhanced_Again/issues/74 see issue for details.

3.3.0-beta8
* Fixed iLvl Datatext hover lua error - https://github.com/nickbock/ElvUI_Enhanced_Again/issues/50

3.3.0-beta7
* Fixed LUA error in Map Cord - https://github.com/nickbock/ElvUI_Enhanced_Again/issues/67
* Fixed Auto release in PvP - https://github.com/nickbock/ElvUI_Enhanced_Again/issues/65

3.3.0-beta6
* Fixed healglow - https://github.com/nickbock/ElvUI_Enhanced_Again/issues/62
* Fixed GPS erros - https://github.com/nickbock/ElvUI_Enhanced_Again/issues/61
* Fixed https://github.com/nickbock/ElvUI_Enhanced_Again/issues/55
* Fixed GPS module as a whole. Now only works in the open world. following Blizzards restrictions.

3.3.0-beta5
* Fixed https://github.com/nickbock/ElvUI_Enhanced_Again/issues/59

3.3.0-beta4
* Fixed https://github.com/nickbock/ElvUI_Enhanced_Again/issues/57

3.3.0-beta3
* Name change to BfA
* Fix https://github.com/nickbock/ElvUI_Enhanced_Again/issues/48

3.3.0-beta2
* Fixed lua error in minimap module

3.3.0-beta1