@@ -1,5 +1,6 @@
 3.3.8
 * Updated for 8.2
+* Updated progression for Palace and fixed BoD
 
 3.3.7-beta1
 * Fix for https://github.com/nickbock/ElvUI_Enhanced_Again/issues/94
